--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Master List Maker</title>
+    <link rel="icon" type="image/x-icon" href="icon.png">
     <style>
       /* ----- BASIC RESETS ----- */
       * {
