--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Master List Maker</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
       /* ----- BASIC RESETS ----- */
       * {
