--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Master List Maker</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <style>
       /* ----- BASIC RESETS ----- */
       * {
